(chore) resolve brakeman warnings …
by appending `_html` to locales with raw html


https://stackoverflow.com/questions/3626038/use-html-inside-a-rails-translation-file

--- a/app/views/admin/jobs/show.html.haml
+++ b/app/views/admin/jobs/show.html.haml
@@ -49,13 +49,13 @@
               = t('admin.jobs.info.approved_by_no_date', name: @job&.approved_by&.full_name)
 
           - elsif @job.expired?
-            =t('admin.jobs.info.request_changes', name: @job&.created_by&.full_name,
+            =t('admin.jobs.info.request_changes_html', name: @job&.created_by&.full_name,
                                                   email: mail_to(@job.created_by.email, @job.created_by.email,
-                                                  subject: "Regarding job listing #{@job.title}")).html_safe
+                                                  subject: "Regarding job listing #{@job.title}"))
           - else
-            =t('admin.jobs.info.request_changes', name: @job&.created_by&.full_name,
-                                                  email: mail_to(@job.created_by.email, @job.created_by.email,
-                                                  subject: "Regarding job listing #{@job.title}")).html_safe
+            =t('admin.jobs.info.request_changes_html', name: @job&.created_by&.full_name,
+                                                       email: mail_to(@job.created_by.email, @job.created_by.email,
+                                                       subject: "Regarding job listing #{@job.title}"))
             %br
             %br
             =link_to 'Approve', admin_job_approve_path(@job.id),
