(fix) evaluate locale
To process html and resolve issue where link html is not processed

--- a/app/views/jobs/_show.html.haml
+++ b/app/views/jobs/_show.html.haml
@@ -3,7 +3,8 @@
     .row
       .large-12.columns
         .panel
-          = "#{t('job.expired')} #{t('job.check_out_jobs_html', link: link_to('jobs', jobs_url))}"
+          =t('job.expired')
+          =t('job.check_out_jobs_html', link: link_to('jobs', jobs_url))
   .row
     .medium-12.columns
       %h2
