--- a/app/views/admin/workshops/_invitation_management.html.haml
+++ b/app/views/admin/workshops/_invitation_management.html.haml
@@ -34,6 +34,6 @@
         %h4
           Coaches
           %label.label.round.secondary #{@workshop.attending_coaches.count}#{(" of " + @workshop.host.coach_spots.to_s) if @workshop.has_host?}
-          %label.label.round.signed-in #{ @workshop.attending_coaches.count(&:attended) }
+          %label.label.round.signed-in #{ @attending_coaches.count(&:attended) }
       = render partial: 'admin/workshop/attendances', locals: { invitations: @attending_coaches }
       = render partial: 'admin/workshop/waiting_list', locals: { waiting_list: @coach_waiting_list }
