Fix link borders in footer and admin event checkboxes
Resolves minor visual bug introduced in #837

--- a/app/assets/stylesheets/partials/_attendances.scss
+++ b/app/assets/stylesheets/partials/_attendances.scss
@@ -3,8 +3,14 @@
         margin-bottom: 0;
     }
 
+    .verify_attendance,
+    .cancel_attendance {
+        border: none;
+    }
+
     a .fa {
         color: black;
+
         &:hover {
             text-shadow: 1px 1px 1px #999;
         }
