--- a/app/assets/stylesheets/partials/_layout.scss
+++ b/app/assets/stylesheets/partials/_layout.scss
@@ -1,6 +1,7 @@
 .main-footer {
   background-color: $primary-color;
   padding: 50px 0;
+  color: rgba(255, 255, 255, 0.8);
 
   a {
     color: $white;
