--- a/app/assets/stylesheets/partials/_chapter.scss
+++ b/app/assets/stylesheets/partials/_chapter.scss
@@ -6,7 +6,7 @@
   .month {
     font-weight: bold;
     font-size: 1em;
-    font-case: upcase;
+    text-transform: uppercase;
   }
 
   .time {
@@ -29,5 +29,48 @@
 
   .organisers {
     margin-top: 12px;
+  }
+}
+
+.organiser {
+  border: 1px solid #f7f4fa;
+  margin: 4px;
+  .row {
+    text-align: center;
+    padding: 15px;
+    margin: 0 5px;
+  }
+}
+
+.chapter-header {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
+.chapter-header-text {
+  padding-top: 1.42857rem;
+}
+
+.chapter-header-image {
+  padding: 0;
+}
+
+@media (min-width: 71.42857rem) {
+  @supports (display: grid) {
+    .chapter-header {
+      display: grid;
+      margin-left: calc((100vw - 71.42857rem) / 2);
+      grid-template-columns: calc(71.42857rem / 2) 1fr;
+    }
+    .chapter-header-text {
+      grid-column: 1;
+      width: auto;
+    }
+    .chapter-header-image {
+      grid-column: 2;
+      padding-left: 1.07143rem; 
+      width: 50vw;
+    }
   }
 }
