--- a/app/views/meeting_invitation_mailer/attending.html.haml
+++ b/app/views/meeting_invitation_mailer/attending.html.haml
@@ -14,7 +14,7 @@
               %td
                 %h3 Hi #{@member.name},
                 %p.lead
-                  You're confirmed for the next codebar Monthly!
+                  You're confirmed for the next codebar Monthly on #{humanize_date(@meeting.date_and_time, with_time: true)} at #{@meeting.venue.name}!
 
         = render partial: 'agenda'
 
