Reduces size of codebar logo in emails

--- a/app/views/shared_mailers/_body_header.html.haml
+++ b/app/views/shared_mailers/_body_header.html.haml
@@ -2,12 +2,11 @@
   %tr
     %td
     %td.header.container
-
       .content
         %table{ bgcolor: "#fdfdfd" }
           %tr
-            %td
-              = image_tag( 'https://raw.githubusercontent.com/codebar/assets/master/logo/png/website-logo.png', alt: "codebar logo")
-            %td{ align: "right"}
+            %td{ width: "40%" }
+              = image_tag("https://raw.githubusercontent.com/codebar/assets/master/logo/png/website-logo.png", alt: "codebar logo")
+            %td{ align: "right" }
               %h6.collapse= title
     %td
