change url to cookie-policy from cookies

--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -37,5 +37,5 @@
       %ul.inline-list.registration
         %li
           Registered UK company number: 10791813
-        %li= link_to t("navigation.cookies"), cookies_path
+        %li= link_to t("navigation.cookie-policy"), cookie_policy_path
         %li= link_to t("navigation.privacy-policy"), privacy_policy_path
