Improve layout and labelling of the workshops

--- a/app/assets/stylesheets/partials/_chapter.scss
+++ b/app/assets/stylesheets/partials/_chapter.scss
@@ -1,7 +1,7 @@
 #chapter {
-  .date {
-    text-align: center;
-  }
+  // .date {
+  // text-align: center;
+  // }
 
   .month {
     font-weight: bold;
@@ -69,7 +69,7 @@
     }
     .chapter-header-image {
       grid-column: 2;
-      padding-left: 1.07143rem; 
+      padding-left: 1.07143rem;
       width: 50vw;
     }
   }
