--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -34,19 +34,19 @@ nav a.menu {
 }
 
 .user {
-  color: #E3573E;
+  color: #e3573e;
 }
 
 .sign-up {
   border-radius: 1rem;
   padding: 1rem;
-  border: 1px solid #FFEE2C;
-  background-color: #FFEEA6;
+  border: 1px solid #ffee2c;
+  background-color: #ffeea6;
 }
 
 .sign-up.past {
   border: 1px solid grey;
-  background-color: #CCC;
+  background-color: #ccc;
 }
 
 /* The new user flow. */
@@ -75,8 +75,12 @@ nav a.menu {
 }
 
 /* Show/hide togglable elements are controlled by JavaScript. */
-.sign-up-wizard .collapsed { display: none; }
-.no-js .sign-up-wizard .collapsed { display: block; }
+.sign-up-wizard .collapsed {
+  display: none;
+}
+.no-js .sign-up-wizard .collapsed {
+  display: block;
+}
 
 .workshop.title {
   color: grey;
@@ -153,15 +157,35 @@ u {
   padding: 50px 0;
 }
 
-.grouped-events:not(:last-child) {
-  border-bottom: 1px dotted $primary-color;
-  margin-bottom: 20px;
+.stripe.reverse#chapter {
+  h3 {
+    font-weight: 300;
+  }
 }
 
-.stripe:nth-child(even) .grouped-events:not(:last-child) {
-  border-bottom: 1px dotted $white;
-  margin-bottom: 20px;
+.grouped-events {
+  // border-bottom: 1px solid rgba($primary-color, 0.25);
+  margin: 20px 0;
+
+  h4 {
+    font-size: 0.9rem;
+    font-weight: 800;
+  }
 }
+.events-list {
+  margin-bottom: 30px;
+
+  &--past-events {
+    .event {
+      opacity: 0.5;
+    }
+  }
+}
+
+// .stripe:nth-child(even) .grouped-events:not(:last-child) {
+//   border-bottom: 1px dotted $white;
+//   margin-bottom: 20px;
+// }
 
 .sponsor-image a {
   border-bottom: none;
