--- a/app/views/events/_event.html.haml
+++ b/app/views/events/_event.html.haml
@@ -1,37 +1,33 @@
 .event#minified
-  .row
-    .small-3.medium-2.columns
-      .date
-        .time
-          = event.time
-      .text-center
-        - if event.chapter
-          %span.label.status
-            = event.chapter.name
-        - if @user
-          - if @user.attending?(event.__getobj__)
-            = link_to event.path do
-              %span.label.success Attending
-          - if @user.event_organiser?(event)
-            = link_to event.admin_path do
-              %span.label Manage
-    .small-9.medium-10.columns
-      .title
-        =link_to event.to_s, event.path
-        - if event.venue.present?
-          at
-          = link_to event.venue.name, event.venue.website
-      .row
-        .medium-6.columns
-          - if event.organisers.any?
-            .organisers
-              - event.organisers.each do |organiser|
-                =link_to twitter_url_for(organiser.twitter), class: 'user-link' do
-                  =image_tag(organiser.avatar(26), class: 'th radius', title: organiser.full_name, alt: organiser.full_name)
-        .medium-6.columns#sponsors
-          - if event.sponsors.any?
-            - event.sponsors.each do |sponsor|
-              = link_to sponsor.website do
-                = image_tag(sponsor.avatar.thumb, class: 'sponsor', alt: sponsor.name)
-
-      %br
+  %header.event__header
+    %h3.title
+      =link_to event.to_s, event.path
+    - if event.chapter
+      %span.label.status
+        = event.chapter.name
+    - if @user
+      - if @user.attending?(event.__getobj__)
+        = link_to event.path do
+          %span.label.success Attending
+      - if @user.event_organiser?(event)
+        = link_to event.admin_path do
+          %span.label Manage
+  .event__details
+    .time
+      = event.date + ' @ ' + event.time
+    .hosted
+      - if event.venue.present?
+        Hosted at:
+        = link_to event.venue.name, event.venue.website
+  .event__footer 
+    .event__organisers
+      - if event.organisers.any?
+        .organisers
+          - event.organisers.each do |organiser|
+            =link_to twitter_url_for(organiser.twitter), class: 'user-link' do
+              =image_tag(organiser.avatar(26), class: 'th radius', title: organiser.full_name, alt: organiser.full_name)
+    .event__sponsors
+      - if event.sponsors.any?
+        - event.sponsors.each do |sponsor|
+          = link_to sponsor.website do
+            = image_tag(sponsor.avatar.thumb, class: 'sponsor', alt: sponsor.name)
