--- a/app/assets/stylesheets/partials/_event.scss
+++ b/app/assets/stylesheets/partials/_event.scss
@@ -1,13 +1,3 @@
-#minified {
-  .sponsor {
-    max-width: 90px;
-    max-height: 60px;
-    &:not(:last-child) {
-      margin-right: 10px;
-    }
-  }
-}
-
 #sidebar {
   background: #fdfdfd;
   padding: 32px 20px;
@@ -19,6 +9,21 @@
   padding: 20px;
   margin-top: 10px;
   border: 1px solid rgba($primary-color, 0.25);
+  border-radius: 3px;
+
+  display: flex;
+  justify-content: space-between;
+
+  &__col-1,
+  &__col-2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  &__col-2 {
+    align-items: flex-end;
+  }
 
   &__header {
     .title,
@@ -29,32 +34,38 @@
     }
   }
 
-  &__header,
-  &__footer {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-end;
-  }
-
   &__details {
-    margin-top: 20px;
+    margin-top: 15px;
     font-size: 0.9rem;
+    .date,
     .time {
-      font-weight: 800;
+      i {
+        font-size: 0.9rem;
+        margin-top: -2px;
+        vertical-align: middle;
+        opacity: 0.5;
+      }
     }
   }
 
-  &__footer {
-    margin-top: 20px;
+  &__organisers {
+    margin-top: 12px;
 
-    .organisers {
+    #{$root}__organisers-list {
       margin: 0 !important;
     }
+  }
 
-    #{$root}__sponsors {
-      a {
-        border: none;
+  &__sponsors {
+    img {
+      max-width: 90px;
+      max-height: 60px;
+      &:not(:last-child) {
+        margin-right: 10px;
       }
+    }
+    a {
+      border: none;
     }
   }
 }
