--- a/app/assets/stylesheets/partials/_event.scss
+++ b/app/assets/stylesheets/partials/_event.scss
@@ -19,6 +19,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    width: 100%;
   }
 
   &__col-2 {
@@ -57,15 +58,20 @@
   }
 
   &__sponsors {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-end;
+    a {
+      border: none;
+      margin-top: 10px;
+      margin-left: 10px;
+    }
     img {
       max-width: 90px;
       max-height: 60px;
       &:not(:last-child) {
         margin-right: 10px;
       }
-    }
-    a {
-      border: none;
     }
   }
 }
