--- a/app/assets/stylesheets/partials/_event.scss
+++ b/app/assets/stylesheets/partials/_event.scss
@@ -7,9 +7,10 @@
   $root: &;
 
   padding: 20px;
-  margin-top: 10px;
-  border: 1px solid rgba($primary-color, 0.25);
-  border-radius: 3px;
+  margin-bottom: 30px;
+  border-radius: 5px;
+
+  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.1), 0 8px 10px 0 rgba(0, 0, 0, 0.05);
 
   display: flex;
   justify-content: space-between;
