Adds confirm dialog to cancel attendance button to help prevent accidental attendance removal

--- a/app/views/admin/workshop/_attendances.html.haml
+++ b/app/views/admin/workshop/_attendances.html.haml
@@ -11,7 +11,7 @@
               - else
                 %i.fa.fa-check-square-o
             - else
-              = link_to admin_workshop_invitation_path(@workshop, invitation, attending: false), class: 'cancel_attendance', title: 'Cancel RSVP', method: :put, remote: true do
+              = link_to admin_workshop_invitation_path(@workshop, invitation, attending: false), class: 'cancel_attendance', title: 'Cancel RSVP', data: { confirm: "Are you sure you want to remove #{invitation.member.full_name} from the list of attendees?" }, method: :put, remote: true do
                 %i.fa.fa-minus-square-o
           %td.small-5.columns
             - if invitation.member.newbie?
