Added text to new job form
Added provided text to new job form explaining it is only required if user wants job to be shared with Google Search UK.

--- a/app/views/member/jobs/_form.html.haml
+++ b/app/views/member/jobs/_form.html.haml
@@ -34,6 +34,10 @@
   .row
     .large-6.columns
       = f.input :location, required: true
+
+  %small
+    = t('member.jobs.new.optional_details_message')
+
   .row
     .large-6.columns
       = f.input :company_address
