Removes mention of checking social media profiles from eligibility criteria and eligibility check emails

--- a/app/views/member_mailer/eligibility_check.html.haml
+++ b/app/views/member_mailer/eligibility_check.html.haml
@@ -6,9 +6,8 @@
   = link_to "eligibility criteria.", "http://codebar.io/student-guide#eligibility"
 
 %p
-  The reason we are getting in touch is because we cannot tell from your name or
-  social media accounts if you identify as a female. Male students who belong
-  to an underrepresented ethnic minority group or identify as LGBTQ are welcome.
+  The reason we are getting in touch is because we cannot determine whether you
+  belong to one of the underrepresented groups outlined in our eligibility criteria.
 
 %p
   %strong
