Sidemenu is not sticky

--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -687,7 +687,7 @@ $tabbar-color: #FFFFFF;
 // $tabbar-header-margin: 0;
 
 // Off Canvas Menu Variables
-// $off-canvas-width: rem-calc(250);
+$off-canvas-width: rem-calc(250);
 // $off-canvas-bg: #333;
 
 // Off Canvas Menu List Variables
