Fix: Spelling mistake in i18n

--- a/app/views/dashboard/effective-teacher-guide.html.haml
+++ b/app/views/dashboard/effective-teacher-guide.html.haml
@@ -18,7 +18,7 @@
         %li= t('dashboard.teacher_guide.introduction')
         %li= t('dashboard.teacher_guide.backgrounds')
         %li= t('dashboard.teacher_guide.limits')
-        %li= t('dashboard.teacher_guide.colaboration')
+        %li= t('dashboard.teacher_guide.collaboration')
         %li= t('dashboard.teacher_guide.discussion')
         %li= t('dashboard.teacher_guide.talk_slow')
         %li= t('dashboard.teacher_guide.mild_approach')
