Fixes rubocop offenses in application_helper
Removes a method has_permission? from application_helper and replaces any calls to it with is_admin_or_organiser? method from member.rb

--- a/app/views/layouts/_admin_menu.html.haml
+++ b/app/views/layouts/_admin_menu.html.haml
@@ -3,7 +3,7 @@
 %li= link_to 'Admin Dashboard', admin_root_path
 %li= link_to 'View Feedback', admin_feedback_index_path
 %li= link_to 'New Announcement', new_admin_announcement_path
-- if has_permission?
+- if current_user.is_admin_or_organiser?
   %li= link_to 'New workshop', new_admin_workshop_path
   %li= link_to 'New sponsor', new_admin_sponsor_path
 %li= link_to 'New event', new_admin_event_path
