--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -14,6 +14,7 @@
 @import 'partials/jobs';
 @import 'partials/star-rating';
 @import 'partials/event';
+@import 'partials/workshop';
 
 .row-spaced {
   padding-bottom: 20px;
