--- a/app/views/admin/workshops/show.html.haml
+++ b/app/views/admin/workshops/show.html.haml
@@ -37,7 +37,7 @@
           = link_to [:admin, @workshop.chapter] do
             %small=@workshop.chapter.name
         %h3
-          %small #{l(@workshop.date_and_time)}
+          %small #{l(@workshop.date_and_time)}#{@workshop.ends_at.present? ? " - " + @workshop.ends_at.strftime('%H:%M') : "" }
         - if @workshop.rsvp_opens_at
           RSVPs will open at
           = @workshop.rsvp_opens_at.strftime('%H:%M on %d/%m/%Y.')
