Ability to mark a workshop as cancelled

--- a/app/views/admin/workshops/_edit_form.html.haml
+++ b/app/views/admin/workshops/_edit_form.html.haml
@@ -28,6 +28,7 @@
       %label Organisers
       = f.collection_select :organisers, Member.all, :id, :full_name, { selected: @workshop.organisers.map(&:id) }, { multiple: true }
       = f.input :invitable
+      = f.input :cancelled
   .row
     .large-12.columns.text-right
       = f.submit 'Save', class: 'button'
