--- a/app/views/admin/workshops/_form.html.haml
+++ b/app/views/admin/workshops/_form.html.haml
@@ -26,6 +26,7 @@
   .row
     .large-6.columns
       = f.input :invitable
+      = f.input :cancelled
   .row
     .large-12.columns.text-right
       = f.submit 'Save', class: 'button'
