--- a/app/assets/stylesheets/partials/_colors.sass
+++ b/app/assets/stylesheets/partials/_colors.sass
@@ -11,6 +11,7 @@ $red: #C40233
 $lightgreen: #69b986
 $lightyellow: #f8d773
 $white: #ffffff
+$black: #000000
 
 $become-member-grey: #5e5a6b
 $become-member-white: #f1f1f3
