--- a/app/views/workshops/show.html.haml
+++ b/app/views/workshops/show.html.haml
@@ -6,7 +6,12 @@
       %h2
         Workshop at #{@workshop.host.name}
         %br
-        %small #{humanize_date(@workshop.date_and_time, with_time: true)} #{@workshop.distance_of_time}
+        %small #{humanize_date(@workshop.date_and_time)} #{@workshop.distance_of_time}
+        #workshop-time.time
+          %i.material-icons
+            access_time
+          = @workshop.time
+          = @workshop.ends_at.present? ? "- " +  l(@workshop.ends_at, format: :time) : ""
       - if @workshop.date_and_time.past?
         %label.label.warning This event has already taken place.
   %section#banner
