--- a/app/views/admin/workshops/_form.html.haml
+++ b/app/views/admin/workshops/_form.html.haml
@@ -1,4 +1,4 @@
-= simple_form_for [:admin, @workshop], url: :admin_workshops do |f|
+= simple_form_for [:admin, @workshop], html: { novalidate: true } do |f|
   .row
     .medium-6.columns
       = f.association :chapter, as: :select, collection: Chapter.available_to_user(current_user)
