(feature) subscribe new member to newsletter … unless they opt out

--- a/app/views/members/step1.html.haml
+++ b/app/views/members/step1.html.haml
@@ -28,6 +28,10 @@
           = f.input :about_you, as: :text, label: "What do you want to work on at codebar? What have you done in the past? Tell us a little about yourself!", required: true
 
     .row
+      .large-6.large-offset-3.columns
+        = f.input :newsletter, as: :boolean, boolean_style: :inline, checked_value: true, unchecked_value: false, label: "If you do not want to receive the codebar newsletter uncheck this box"
+
+    .row
       .large-6.large-offset-3.columns.text-right
         = hidden_field_tag :next_page, step2_member_path(member_type: @type)
         = f.submit "Next", class: 'button round right'
